230114: pipelining complete, but need some revision
feat

1. 파이프라인 관련 함수들을 완성함.
2. 다만 아래와 같은 문제점이 존재함.
  * pipeline을 포함한 입력에서 다중 heredoc 사용시 오류 발생.
  * 이는 get_next_line 에서 제대로 문자열을 받아오지 못하는 오류로 보임.
  * 따라서 get_next_line 을 readline으로 수정하는 작업이 필요함.

  * heredoc을 프로세스별 임시파일을 따로 만들도록 했음.
  * 그러나 두개 이상의 터미널에서 minishell을 실행할경우 파일이 겹침.
  * 임시파일 대신 heap 할당해서 보관할 필요성이 있어보임.
3. 그 외 함수들에 주석 추가 등 중요하지 않은 수정사항 존재.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "get_next_line.h": "c",
-        "libft.h": "c"
+        "libft.h": "c",
+        "execution_test.h": "c"
     }
 }
