--- a/execute/Makefile
+++ b/execute/Makefile
@@ -5,7 +5,7 @@ NAME = minishell
 LIBFT = ../libft/libft.a
 LIBFT_DIR = ../libft/
 
-SRCS = execution_test.c execute.c execute_command.c execute_redir.c execute_utils.c
+SRCS = execution_test.c execute.c execute_command.c execute_redir.c execute_utils.c execute_pipe.c
 SRCS_OBJS = $(SRCS:.c=.o)
 
 GNL_NAME = get_next_line.c get_next_line_utils.c
