230114: serious problem found in heredoc
fix && error

1. 자식 프로세스단에서 readline을 통해 heredoc을 구현하려 했지만, 2중
heredoc에서 실패
2. 검색 결과 heredoc 입력받는것은 부모 프로세스 단에서 수행되어야 함
3. execute pipeline 실행 전 모든 commandlist의 heredoc을 검사하고,
   각 경우에 대해 input을 모두 받아온 뒤, 마지막 redir_in, redir_out에
   대해서만 redirection을 수행한 뒤 모든 임시파일을 제거하는 식으로
   구현.
4. ex) cat << aaa > a.txt << bbb > b.txt | cat << ccc > c.txt
5. input : qwer\naaa\n1234\nbbb\n0000\nccc\n
6. result : a.txt - NONE, b.txt - 1234, c.txt - 0000

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "files.associations": {
-        "get_next_line.h": "c",
         "libft.h": "c",
         "execution_test.h": "c",
-        "readline.h": "c"
+        "readline.h": "c",
+        "history.h": "c"
     }
 }
