--- a/execute/Makefile
+++ b/execute/Makefile
@@ -8,26 +8,39 @@ LIBFT_DIR = ../libft/
 SRCS = execution_test.c execute.c execute_command.c execute_redir.c execute_utils.c execute_pipe.c
 SRCS_OBJS = $(SRCS:.c=.o)
 
-GNL_NAME = get_next_line.c get_next_line_utils.c
-GNL_OBJS = $(GNL_NAME:.c=.o)
+LDFLAGS = -lreadline -lhistory -L$(READ_DIR)
+INCLUDES = -I$(READ_HDRS)
+READ_DIR = ./readline/lib/
+READ_HDRS	= ./readline/include/
 
-OBJS = $(SRCS_OBJS) $(GNL_OBJS)
+OBJS = $(SRCS_OBJS)
 
 all : $(NAME)
 
-$(NAME) : $(OBJS)
-	$(CC) $(CFLAGS) $(LIBFT) -o $(NAME) $^
+$(NAME) : rl $(OBJS)
+	$(CC) $(CFLAGS) $(LIBFT) $(LDFLAGS) $(INCLUDES) -o $(NAME) $(OBJS)
 
 %.o : %.c
 	$(CC) $(CFLAGS) -c $<
 
 clean :
 	rm -f $(OBJS)
-	rm -f *.txt
+	rm -rf rlsrc
+	rm -rf readline/bin readline/share
+	rm -f *.txt heredoc_tmp*
 
 fclean : clean
 	rm -f $(NAME)
+	rm -rf readline
+	rm -f rl
 
 re : fclean all
+
+rl :
+	git clone git://git.savannah.gnu.org/readline.git rlsrc
+	cd rlsrc && ./configure --prefix="${PWD}/readline"
+	$(MAKE) --directory=rlsrc
+	$(MAKE) --directory=rlsrc install
+	touch rl
 
 .PHONY : clean fclean re
