230114: complete heredoc function
fix

1. heredoc pipeline 환경에서도 동작하도록 수정.
2. cat << a > a.txt | cat << b > b.txt 에서 정상작동함을 확인
3. 그러나 bash에서는 parent process에서 동작하는거와 다르게 작동하고,
4. 나중에 추가할 시그널함수 등에서 정상적으로 작동하는지 확인 필요

--- a/execute/Makefile
+++ b/execute/Makefile
@@ -5,7 +5,7 @@ NAME = minishell
 LIBFT = ../libft/libft.a
 LIBFT_DIR = ../libft/
 
-SRCS = execution_test.c execute.c execute_command.c execute_redir.c execute_utils.c execute_pipe.c
+SRCS = execution_test.c execute.c execute_command.c execute_redir.c execute_utils.c execute_pipe.c get_next_line.c get_next_line_utils.c
 SRCS_OBJS = $(SRCS:.c=.o)
 
 LDFLAGS = -lreadline -lhistory -L$(READ_DIR)
