230117: added library function, echo/exit/pwd function
feat

1. echo, exit, pwd built-in 함수 추가
2. exit 함수를 위한 is_numeric 함수 libft에 추가
3. 추가한 함수를 포함하는 라이브러리 recompile

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -39,6 +39,7 @@ SRCS		= ft_strlen.c		\
 				ft_putstr_fd.c	\
 				ft_putendl_fd.c	\
 				ft_putnbr_fd.c	\
+				ft_isnumeric.c	\
 
 SRCS_BONUS	= ft_lstnew_bonus.c		\
 				ft_lstsize_bonus.c		\
