--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "libft.h": "c",
         "execution_test.h": "c",
         "readline.h": "c",
-        "history.h": "c"
+        "history.h": "c",
+        "minishell.h": "c"
     }
 }
