--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "execution_test.h": "c",
         "readline.h": "c",
         "history.h": "c",
-        "minishell.h": "c"
+        "minishell.h": "c",
+        "system_error": "c"
     }
 }
