230123: error message && refactoring feat && refact
1. 에러 메시지 출력 통일화
2. exit을 바로 호출하는 경우 따로 free해주지 않도록 변경
3. 몇몇 사소한 오류 수정
4. 파싱부 완료되면 테스트 필요

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "readline.h": "c",
         "history.h": "c",
         "minishell.h": "c",
-        "system_error": "c"
+        "system_error": "c",
+        "__errc": "c",
+        "ios": "c"
     }
 }
